--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 Hamd ur Rahman. All rights reserved.</p>
+        <p>&copy; © 2024 Hamd ur Rahman. All rights reserved. The audios are the property of www.mumtazurdu.com.</p>
     </footer>
 
     <script>
