--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     </div>
 
     <footer>
-        <p>&copy; The audios are the property of www.mumtazurdu.com.</p>
+        <p>&copy;The audios are the property of www.mumtazurdu.com. Website designed and audios provided by Hamd ur Rahman.</p>
     </footer>
 
     <script>
